# XpongeCPP

./: .gitignore  CMakeLists.txt  README.md  pixi.toml  pyproject.toml
.codex/skills/xpongecpp-code-standards/: SKILL.md
.codex/skills/xpongecpp-gaff-assign-migration/: SKILL.md
.codex/skills/xpongecpp-migration-checklist/: SKILL.md
.github/workflows/: build-packages.yml  publish-pypi.yml
benchmarks/: _paths.py  bench_1kv2.py  bench_forcefield_migration.py  bench_resp_backends.py  fetch_external_regression_data.py  generate_gaff_assign_100_baseline.py  reference_1kv2_b96_xponge.py
cpp/: core.hpp
cpp/assign/: amber_alternating.cpp  amber_alternating.hpp  assign.cpp  bond_order.cpp  gaff.cpp  mol2_assignment.cpp  resp.cpp  ring.cpp  tpacm4.cpp
cpp/core/: element_mass.cpp  molecule.cpp  parallel_utils.hpp  template_ops.cpp
cpp/forcefield/: amber.cpp  amber_builtins.cpp  amber_internal.hpp  amber_names.cpp  amber_parser.cpp  amber_registry.cpp  amber_templates.cpp  charmm_loader.cpp  fep.cpp  gromacs_parser.cpp  nonamber.cpp  nonamber_internal.hpp  opls_loader.cpp  special_pairwise.cpp
cpp/forcefield/special/: gb.cpp
cpp/io/: coordinate.cpp  gro.cpp  io_bundle.cpp  mol2.cpp  pdb.cpp  pdb_hybrid36.cpp  pdb_internal.hpp  pdb_reader.cpp  pdb_records.hpp  pdb_writer.cpp  psf.cpp  sha256.hpp  sponge.cpp  sponge_coordinate.cpp  sponge_writers.hpp
cpp/python/: bindings.cpp  bindings_assign.cpp  bindings_core.cpp  bindings_forcefield.cpp  bindings_internal.hpp  bindings_io.cpp
cpp/solvation/: solvation.cpp
cpp/topology/: topology.cpp
data/amber/: README.md
docs/: api-overview.md  api-overview.zh-CN.md  installation.md  installation.zh-CN.md  releasing.md  releasing.zh-CN.md  xponge-vs-xpongecpp-architecture-status.md
docs/migration/: 1kv2-b96-standard-workflow-plan.md  8ryk-manual-frcmod-migration-plan.md  assignment-dev-branch-parity-plan.md  compat-structure-cleanup-plan.md  opls-nonamber-parity-plan.md  resp-psi4-cpp-migration-plan.md  unified-legacy-compatibility-plan.md
docs/refactor/: code-structure-reorg-plan.md  mcpb-draft-plan.md  unified-qm-architecture-plan.md
python/XpongeCPP/: __init__.py
python/XpongeCPP/assign/: __init__.py  resp.py
python/XpongeCPP/data/amber/: README.md
python/XpongeCPP/data/reference_forcefield/: README.md
python/XpongeCPP/forcefield/: __init__.py
python/XpongeCPP/forcefield/amber/: __init__.py  bsc1.py  ff14sb.py  lipid14.py  ol3.py  spce.py  tip3p.py  tip4pew.py
python/XpongeCPP/forcefield/charmm/: __init__.py
python/XpongeCPP/forcefield/edip/: __init__.py  si.py
python/XpongeCPP/forcefield/opls/: __init__.py
python/XpongeCPP/forcefield/special/: __init__.py  fep.py
python/XpongeCPP/forcefield/sw/: __init__.py
scripts/: build_pypi.py  validate_bundle_parity.py
src/Xponge/: __init__.py  build.py  load.py  mdrun.py  process.py
src/Xponge/analysis/: __init__.py  md_analysis.py  sasa.py  wham.py
src/Xponge/assign/: __init__.py
src/Xponge/forcefield/: __init__.py
src/Xponge/forcefield/amber/: __init__.py  ff14sb.py  ff19sb.py  gaff.py  tip3p.py
src/Xponge/forcefield/base/: __init__.py  angle_base.py  bond_base.py  charge_base.py  cmap_base.py  dihedral_base.py  exclude_base.py  lj_base.py  mass_base.py  nb14_base.py  virtual_atom_base.py
src/Xponge/forcefield/charmm/: __init__.py  charmm27.py  charmm36.py  (+2 more)
src/Xponge/helper/: __init__.py  cv.py  file.py  gromacs.py  math.py  namespace.py
src/Xponge/tools/: __init__.py
src/XpongeCPP/: __init__.py  build.py  compat.py  gromacs.py  io_compat.py  legacy_types.py  load.py  mdrun.py  process.py  template_ops.py
src/XpongeCPP/_compat/: __init__.py  aliases.py  api.py  assign.py  bootstrap.py  forcefield.py  imports.py  molecule.py  process.py  residuetype.py  runtime.py  symbols.py  workflows.py
src/XpongeCPP/analysis/: __init__.py  md_analysis.py  sasa.py  wham.py
src/XpongeCPP/assign/: __init__.py  psi4_backend.py  pyscf_backend.py  resp.py  resp_core.py
src/XpongeCPP/data/: __init__.py
src/XpongeCPP/forcefield/: __init__.py
src/XpongeCPP/helper/: __init__.py  cv.py  file.py  gromacs.py  math.py  namespace.py  rdkit.py
src/XpongeCPP/mcpb/: __init__.py  api.py  charge_refit.py  export.py  frcmod.py  model_builder.py  models.py  selection.py  seminario.py
src/XpongeCPP/qm/: __init__.py  _esp_memory.py  api.py  capabilities.py  errors.py  models.py  resp_basis.py  resp_parameters.py  scheduler.py
src/XpongeCPP/tools/: __init__.py
tests/: conftest.py  test_1kv2_equivalence.py  test_1kv2_workflow.py  test_8ryk_manual_frcmod.py  test_8ryk_regression.py  test_amber_fep_workflow.py  test_assign_bond_order_refresh.py  test_assign_charge_models.py  test_assign_gaff_parity.py  test_b96_mol2_gaff.py  test_bench_1kv2_script.py  test_bundle_native.py  test_compat_assign.py  test_compat_layer.py  test_compat_process.py  test_compat_surface.py  test_coordinate_io.py  test_external_regression_data.py  test_forcefield_benchmark_script.py  test_forcefield_families.py  test_full_amber_data.py  test_gaff_assign_migration.py  test_glycam_parity.py  test_gro_io.py  test_legacy_import_matrix.py  test_lipid17_extension.py  test_lipid21.py  test_local_testdata_layout.py  test_mcpb_api.py  test_non_amber_parsers.py  test_pdb_chain_terminal_semantics.py  test_poly_non_amber_workflow.py  test_process_migration.py  test_project_metadata.py  test_psf_io.py  test_safety_edges.py  test_xpongecpp_api.py
tests/data/1kv2/: B96.frcmod  B96.mol2  B96_H.mol2
tests/data/1kv2_xponge_baseline/: spg_LJ.txt  spg_angle.txt  spg_atom_name.txt  spg_atom_type_name.txt  spg_bond.txt  spg_charge.txt  spg_coordinate.txt  spg_dihedral.txt  spg_exclude.txt  spg_mass.txt  spg_nb14.txt  spg_residue.txt  spg_resname.txt
tests/data/8ryk/: 8RYK.pdb2  8RYK_pdbfixer_H.pqr  frcmod_init.txt  life_modeling_workflow.toml  spg_init.txt
tests/data/gaff_assign_100/: candidate_cids.txt  manifest.json
tests/data/lipid21/: LICENSE.public-domain.txt  PSM.cif
tests/data/mokda_resp/: CRO_1.charge-preview.capped.mol2  formamide_resp.mol2
tests/data/poly/: ps.gro  ps.itp  ps.psf
(+225 files in other folders)
